chore(DirectoryEntry): fix spacing if no back to search results button

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_directories.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_directories.scss
@@ -402,8 +402,12 @@
         }
     }
 
-    &-button {
-        margin-top: 1.2em;
+    &__button {
+        margin-bottom: 1.2em;
+
+        &--no-margin-top {
+            margin-top: 0;
+        }
     }
 
     &--no-margin {
